@@ -5,7 +5,7 @@ requires "File::HomeDir"                     => "1.00";
 requires "File::ReadBackwards"               => "1.05";
 requires "JSON::Validator"                   => "0.84";
 requires "Mojo::IOLoop::ForkCall"            => "0.17";
-requires "Mojo::IRC"                         => "0.39";
+requires "Mojo::IRC"                         => "0.40";
 requires "Mojolicious"                       => "7.00";
 requires "Mojolicious::Plugin::AssetPack"    => "1.24";
 requires "Mojolicious::Plugin::LinkEmbedder" => "0.2301";
